testdata/baselines/reference/submodule/conformance/lateBoundAssignmentDeclarationSupport7.errors.txt
lateBoundAssignmentDeclarationSupport7.js(8,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
lateBoundAssignmentDeclarationSupport7.js(9,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== usage.js (0 errors) ====
    const x = require("./lateBoundAssignmentDeclarationSupport7.js");
    const y = x.F["my-fake-sym"];
    const z = x.F[x.S];
    
==== lateBoundAssignmentDeclarationSupport7.js (2 errors) ====
    const _sym = Symbol();
    const _str = "my-fake-sym";
    
    function F() {
    }
    F[_sym] = "ok";
    F[_str] = "ok";
    module.exports.F = F;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    module.exports.S = _sym;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.